--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-10 10:07+0000\n"
-"PO-Revision-Date: 2018-05-10 10:13+0000\n"
-"Last-Translator: Raphael Michel <michel@rami.io>\n"
+"PO-Revision-Date: 2018-05-30 09:35+0000\n"
+"Last-Translator: Sebastian Wallroth <sebastian@wallroth.de>\n"
 "Language-Team: German "
 "<https://translate.pretix.eu/projects/pretix/pretix/de/>\n"
 "Language: de\n"
@@ -301,7 +301,7 @@ msgstr "Gebühren"
 #: pretix/base/exporters/orderlist.py:66
 #: pretix/control/templates/pretixcontrol/order/index.html:81
 msgid "Order locale"
-msgstr "Sprache"
+msgstr "Bestellsprache"
 
 #: pretix/base/exporters/orderlist.py:71
 #, python-brace-format
