Translated on translate.pretix.eu (Spanish)
Currently translated at 100.0% (60 of 60 strings)

Translation: pretix/pretix (frontend)
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix-js/es/

powered by weblate

--- a/src/pretix/locale/es/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/es/LC_MESSAGES/djangojs.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-10 10:07+0000\n"
-"PO-Revision-Date: 2018-05-30 17:23+0000\n"
+"PO-Revision-Date: 2018-05-31 02:00+0000\n"
 "Last-Translator: Lorenzo Peña <lorinkoz@nauta.cu>\n"
 "Language-Team: Spanish <https://translate.pretix.eu/projects/pretix/pretix-"
 "js/es/>\n"
@@ -309,7 +309,7 @@ msgid ""
 "ticketing powered by pretix</a>"
 msgstr ""
 "<a href=\"https://pretix.eu\" target=\"_blank\" rel=\"noopener\">tiques para "
-"eventos por cortesía de pretix</a>"
+"eventos cortesía de pretix</a>"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:28
 msgctxt "widget"
